--- a/views/includes/blocks-list.pug
+++ b/views/includes/blocks-list.pug
@@ -157,7 +157,7 @@
 									- var currencyValue = parseInt(satValue.dividedBy(coinConfig.baseCurrencyUnit.multiplier));
 									- var currencyValueDecimals = 0;
 
-									if (userSettings.displayCurrency == "btc")
+									if (userSettings.displayCurrency == "tzn")
 										+valueDisplaySpecial(currencyValue, 0)
 
 									else
@@ -197,7 +197,7 @@
 								- var currencyValue = new Decimal(block.totalFees);
 								- var currencyValueDecimals = 3;
 
-								if (userSettings.displayCurrency == "btc")
+								if (userSettings.displayCurrency == "tzn")
 									+valueDisplaySpecial(block.totalFees, 4)
 
 								else
