--- a/views/includes/index-network-summary.pug
+++ b/views/includes/index-network-summary.pug
@@ -58,7 +58,7 @@ if (exchangeRates)
 					- var currencyValue = parseInt(networkVolume.d1.amt);
 					- var currencyValueDecimals = 0;
 
-					if (userSettings.displayCurrency == "btc")
+					if (userSettings.displayCurrency == "tzn")
 						+valueDisplaySpecial(networkVolume.d1.amt, 0)
 
 					else
