--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block headContent
-	title Bitcoin Explorer
+	title Tyzen Explorer
 	
 block content
 
@@ -38,26 +38,26 @@ block content
 				li
 					p
 						b If you just started your node, it may still be initializing.
-						div At startup, bitcoind verifies its block index before making itself available to serve data. The amount of time the verification process takes depends largely on the speed of the machine bitcoind is running on. If you're running bitcoind on low powered, inexpensive hardware, don't be surprised if this process takes a long time.
+						div At startup, tyzend verifies its block index before making itself available to serve data. The amount of time the verification process takes depends largely on the speed of the machine tyzend is running on. If you're running tyzend on low powered, inexpensive hardware, don't be surprised if this process takes a long time.
 				li
 					p
-						b If you believe your bitcoind node is already initialized...
+						b If you believe your tyzend node is already initialized...
 						div Check your RPC connection info and/or check this application's error log for possible hints about the cause of this issue.
 	else
 
 		+dismissableAlert("homepageWelcomeBannerDismissed")
-			h5 Bitcoin Explorer
+			h5 Tyzen Explorer
 				span.fw-light :
-					span.fst-italic.ms-1 The free, open-source, easy-to-setup, easy-to-use, self-hosted explorer
+					span.fst-italic.ms-1 Find the latest blockchain transaction on Tyzen Network
 			
 
-			span.fw-light Protect your privacy while enjoying the conveniences of public explorers. Made for Bitcoiners by Bitcoiners. Enjoy!
+			span.fw-light Protect your privacy while enjoying the conveniences of public explorers!
 
 			hr
 
 			.mt-2
 				if (global.sourcecodeProjectMetadata)
-					a.btn.btn-sm.btn-primary.mb-2.mb-md-1.me-3(href="https://github.com/janoside/btc-rpc-explorer", title="View source code", data-bs-toggle="tooltip", data-bs-placement="bottom")
+					a.btn.btn-sm.btn-primary.mb-2.mb-md-1.me-3(href="https://github.com/tyzen-tzn/tyzen.live", target="_blank", title="View source code", data-bs-toggle="tooltip", data-bs-placement="bottom")
 						i.bi-git.fs-6.text-white.me-2
 						| View Source
 
@@ -65,9 +65,9 @@ block content
 					i.bi-heart-fill.fs-6.text-danger.me-2
 					| Donate
 					
-				a.btn.btn-sm.btn-primary.mb-2.mb-md-1.me-3(href="https://twitter.com/BitcoinExplorer", target="_blank", title="Follow @BitcoinExplorer on Twitter", data-bs-toggle="tooltip", data-bs-placement="bottom")
+				a.btn.btn-sm.btn-primary.mb-2.mb-md-1.me-3(href="https://twitter.com/tyzenIo", target="_blank", title="Follow @tyzenIo on Twitter", data-bs-toggle="tooltip", data-bs-placement="bottom")
 					i.bi-twitter.fs-6.text-twitter.me-2
-					| @BitcoinExplorer
+					| @tyzenIo
 
 		
 		if (global.activeBlockchain == "main")
@@ -78,13 +78,13 @@ block content
 
 				if (blocksLeft > 0)
 					+blockCountdown("Taproot Activation", blocksLeft)
-						.mb-2 The softfork known as Taproot will activate on Bitcoin's mainnet at block height 709,632. After activation, any Bitcoin user will be able to use a new address type that enables new features and functionality. The Taproot upgrade has been ~4 years in the making!
+						.mb-2 The softfork known as Taproot will activate on Tyzen's mainnet at block height 709,632. After activation, any Tyzen user will be able to use a new address type that enables new features and functionality. The Taproot upgrade has been ~4 years in the making!
 						| Read more about Taproot's history from Pieter Wuille (one of its architects) <a href="https://twitter.com/pwuille/status/1403725170993336322">here</a>.
 
 				else if (blocksLeft <= 0 && blocksLeft > -144)
 					.alert.alert-success
 						h5 Taproot: Activation Height Reached 🎉
-						| Taproot has activated on Bitcoin's mainnet as of block height <a href="./block-height/709632">709,632</a>!
+						| Taproot has activated on Tyzen's mainnet as of block height <a href="./block-height/709632">709,632</a>!
 				
 
 		if (getblockchaininfo.initialblockdownload && !["regtest", "signet"].includes(global.activeBlockchain))
