--- a/views/layout-iframe.pug
+++ b/views/layout-iframe.pug
@@ -9,7 +9,7 @@ html(lang="en")
 		meta(name="csrf-token", content=csrfToken)
 		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no")
 
-		meta(name="description" content="Open-source, easy-to-use, educational Bitcoin explorer whose only dependency is your Bitcoin Core node.")
+		meta(name="description" content="Find latest Tyzen blockchain transaction.")
 		
 		if (!homepage)
 			link(rel="stylesheet", href=assetUrl(`./style/highlight.min.css`), integrity=assetIntegrity("highlight.min.css"), crossorigin="anonymous")
@@ -18,19 +18,19 @@ html(lang="en")
 		+themeCss
 
 
-		link(id="canonical" rel="canonical" href="https://bitcoinexplorer.org")
+		link(id="canonical" rel="canonical" href="https://www.tyzen.live")
 
-		meta(property="og:title" content=(metaTitle != undefined ? metaTitle : "BitcoinExplorer.org - Open-Source Bitcoin Explorer"))
-		meta(property="og:description" content=(metaDesc != undefined ? metaDesc : "Open-source, easy-to-use, educational Bitcoin explorer whose only dependency is your Bitcoin Core node."))
+		meta(property="og:title" content=(metaTitle != undefined ? metaTitle : "Tyzen.live - Tyzen Block Explorer"))
+		meta(property="og:description" content=(metaDesc != undefined ? metaDesc : "Find latest Tyzen blockchain transaction."))
 		meta(property="og:image" content="https://bitcoinexplorer.org/img/preview.png")
 
 		meta(property="twitter:card" content="summary_large_image")
-		meta(property="twitter:site" content="@BitcoinExplorer")
-		meta(property="twitter:creator" content="@BitcoinExplorer")
-		meta(property="twitter:title" content=(metaTitle != undefined ? metaTitle : "BitcoinExplorer.org"))
-		meta(property="twitter:description" content=(metaDesc != undefined ? metaDesc : "Open-source, easy-to-use, educational Bitcoin explorer whose only dependency is your Bitcoin Core node."))
+		meta(property="twitter:site" content="@tyzenIo")
+		meta(property="twitter:creator" content="@tyzenIo")
+		meta(property="twitter:title" content=(metaTitle != undefined ? metaTitle : "Tyzen.live"))
+		meta(property="twitter:description" content=(metaDesc != undefined ? metaDesc : "Find latest Tyzen blockchain transaction."))
 		meta(property="twitter:image:src" content=(metaImgUrl != undefined ? metaImgUrl : "https://bitcoinexplorer.org/img/preview.png"))
-		meta(property="twitter:domain" content="bitcoinexplorer.org")
+		meta(property="twitter:domain" content="tyzen.live")
 
 		link(rel="apple-touch-icon", sizes="180x180", href=assetUrl("./img/network-mainnet/apple-touch-icon.png"))
 		link(rel="icon", type="image/png", sizes="32x32", href=assetUrl("./img/network-mainnet/favicon-32x32.png"))
@@ -38,8 +38,8 @@ html(lang="en")
 		link(rel="manifest", href="./img/network-mainnet/site.webmanifest")
 		link(rel="mask-icon", href="./img/network-mainnet/safari-pinned-tab.svg", color="#f7931a")
 		link(rel="shortcut icon", href="./img/network-mainnet/favicon.ico")
-		meta(name="apple-mobile-web-app-title", content="BTC Explorer")
-		meta(name="application-name", content="BTC Explorer")
+		meta(name="apple-mobile-web-app-title", content="Tyzen Live Explorer")
+		meta(name="application-name", content="Tyzen Live Explorer")
 		meta(name="msapplication-TileColor", content="#022e70")
 		meta(name="msapplication-config", content="./img/network-mainnet/browserconfig.xml")
 		meta(name="theme-color" content="#022e70")
