--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html(lang="en")
 		meta(name="csrf-token", content=csrfToken)
 		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no")
 
-		meta(name="description" content="Open-source, easy-to-use, educational Bitcoin explorer whose only dependency is your Bitcoin Core node.")
+		meta(name="description" content="Open-source, easy-to-use, educational Tyzen explorer whose only dependency is your Tyzen Core node.")
 		
 		if (!homepage)
 			link(rel="stylesheet", href=assetUrl(`./style/highlight.min.css`), integrity=assetIntegrity("highlight.min.css"), crossorigin="anonymous")
@@ -17,19 +17,19 @@ html(lang="en")
 		+themeCss
 		
 
-		link(id="canonical" rel="canonical" href="https://bitcoinexplorer.org")
+		link(id="canonical" rel="canonical" href="https://www.tyzen.live")
 
-		meta(property="og:title" content=(metaTitle != undefined ? metaTitle : "BitcoinExplorer.org - Open-Source Bitcoin Explorer"))
-		meta(property="og:description" content=(metaDesc != undefined ? metaDesc : "Open-source, easy-to-use, educational Bitcoin explorer whose only dependency is your Bitcoin Core node."))
+		meta(property="og:title" content=(metaTitle != undefined ? metaTitle : "Tyzen.live - Tyzen BLock Explorer"))
+		meta(property="og:description" content=(metaDesc != undefined ? metaDesc : "Find latest Tyzen blockchain transaction."))
 		meta(property="og:image" content="https://bitcoinexplorer.org/img/preview.png")
 
 		meta(property="twitter:card" content="summary_large_image")
-		meta(property="twitter:site" content="@BitcoinExplorer")
-		meta(property="twitter:creator" content="@BitcoinExplorer")
-		meta(property="twitter:title" content=(metaTitle != undefined ? metaTitle : "BitcoinExplorer.org"))
-		meta(property="twitter:description" content=(metaDesc != undefined ? metaDesc : "Open-source, easy-to-use, educational Bitcoin explorer whose only dependency is your Bitcoin Core node."))
+		meta(property="twitter:site" content="@tyzenIo")
+		meta(property="twitter:creator" content="@tyzenIo")
+		meta(property="twitter:title" content=(metaTitle != undefined ? metaTitle : "Tyzen.Live"))
+		meta(property="twitter:description" content=(metaDesc != undefined ? metaDesc : "Find latest Tyzen blockchain transaction."))
 		meta(property="twitter:image:src" content=(metaImgUrl != undefined ? metaImgUrl : "https://bitcoinexplorer.org/img/preview.png"))
-		meta(property="twitter:domain" content="bitcoinexplorer.org")
+		meta(property="twitter:domain" content="tyzen.live")
 
 		- var network = global.activeBlockchain || "main";
 		if (!network.endsWith("net") && network != "regtest")
@@ -41,8 +41,8 @@ html(lang="en")
 		link(rel="manifest", href=`./img/network-${network}/site.webmanifest`)
 		link(rel="mask-icon", href=`./img/network-${network}/safari-pinned-tab.svg`, color="#f7931a")
 		link(rel="shortcut icon", href=assetUrl(`./img/network-${network}/favicon.ico`))
-		meta(name="apple-mobile-web-app-title", content="BTC Explorer")
-		meta(name="application-name", content="BTC Explorer")
+		meta(name="apple-mobile-web-app-title", content="Tyzen Explorer")
+		meta(name="application-name", content="Tyzen Explorer")
 		meta(name="msapplication-TileColor", content="#022e70")
 		meta(name="msapplication-config", content=`./img/network-${network}/browserconfig.xml`)
 		meta(name="theme-color" content="#022e70")
@@ -65,11 +65,11 @@ html(lang="en")
 						if (coinConfig.siteTitlesByNetwork && coinConfig.siteTitlesByNetwork[activeBlockchain])
 							span.fw-light #{coinConfig.siteTitlesByNetwork[activeBlockchain]}
 						else
-							span.fw-light Bitcoin Explorer
+							span.fw-light Tyzen Explorer
 
 				if (false && config.demoSite)
 					- var networkNameMap = {"main": "Mainnet", "test": "Testnet", "signet": "Signet"};
-					span.badge.bg-primary(title=`This is a public demo, but this tool is designed to be installed and run by all Bitcoiners...<br/><i>Don't Trust, Verify</i>!`, data-bs-toggle="tooltip", data-bs-html="true")
+					span.badge.bg-primary(title=`This is a public demo, but this tool is designed to be installed and run by all Tyzeners...<br/><i>Don't Trust, Verify</i>!`, data-bs-toggle="tooltip", data-bs-html="true")
 						span Public Demo
 						
 				button.navbar-toggler.navbar-toggler-end(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNav", aria-label="collapse navigation")
@@ -107,7 +107,7 @@ html(lang="en")
 											a.dropdown-item(href=coinConfig.demoSiteUrlsByNetwork[demoSite])
 												img.align-text-top.me-2(src=assetUrl(coinConfig.coinIconUrlsByNetwork[demoSite]), style="width: 20px;")
 												
-												| #{coinConfig.siteTitlesByNetwork[demoSite].replace("Explorer", "").replace("Bitcoin", "Mainnet")}
+												| #{coinConfig.siteTitlesByNetwork[demoSite].replace("Explorer", "").replace("Tyzen", "Mainnet")}
 
 							if (config.siteTools)
 								li.nav-item.dropdown.me-0.me-md-2.mt-2.mt-md-0.text-center.text-md-start
@@ -135,7 +135,7 @@ html(lang="en")
 								.dropdown-menu.dropdown-menu-end.shadow(aria-labelledby="navbarDropdown")
 									span.dropdown-header Display Currency
 
-									- var items = ["BTC", "sat"];
+									- var items = ["TZN", "sat"];
 									if (config.queryExchangeRates && global.exchangeRates)
 										- items.push("local");
 
@@ -294,7 +294,7 @@ html(lang="en")
 									if (coinConfig.demoSiteUrlsByNetwork && coinConfig.demoSiteUrlsByNetwork.main)
 										a.footer-link(href=coinConfig.demoSiteUrlsByNetwork.main) #{coinConfig.demoSiteUrlsByNetwork.main}
 									else
-										a.footer-link(href="https://bitcoinexplorer.org") https://bitcoinexplorer.org
+										a.footer-link(href="https://www.tyzen.live") https://www.tyzen.live
 
 									br
 
@@ -316,13 +316,13 @@ html(lang="en")
 							.ms-2
 								span(style="font-size: 1.5rem;")
 									if (global.sourcecodeProjectMetadata)
-										a.text-white.mb-1.me-3(href="https://github.com/janoside/btc-rpc-explorer", title="View source code", data-bs-toggle="tooltip")
+										a.text-white.mb-1.me-3(href="https://github.com/tyzen-tzn/tyzen.live", title="View source code", data-bs-toggle="tooltip")
 											i.bi-git
 
 									a.text-danger.mb-1.me-3(href="https://donate.bitcoinexplorer.org", target="_blank", title="Support this project with a donation", data-bs-toggle="tooltip")
 										i.bi-heart-fill.text-danger
 
-									a.text-white.mb-1(href="https://twitter.com/BitcoinExplorer", target="_blank", title="Follow @BitcoinExplorer on Twitter", data-bs-toggle="tooltip")
+									a.text-white.mb-1(href="https://twitter.com/tyzenIo", target="_blank", title="Follow @tyzenIo on Twitter", data-bs-toggle="tooltip")
 										i.bi-twitter.text-twitter
 								
 								
